--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "6.9.1",
+    "isomorphic-fetch": "2.2.1",
     "object-assign": "4.1.0",
+    "purecss": "0.6.0",
     "react": "15.2.0",
     "react-dom": "15.2.0",
     "react-redux": "4.4.5",
     "react-router-redux": "4.0.5",
-    "redux": "3.5.2"
+    "redux": "3.5.2",
+    "redux-thunk": "2.1.0"
   },
   "devDependencies": {
     "babel-cli": "6.10.1",
